--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MATERNALLE</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="min-h-dvh flex flex-col">
+    <div id="root" class="flex-1"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
